--- a/dev/blocks/block-footer/footer.pug
+++ b/dev/blocks/block-footer/footer.pug
@@ -1,18 +1,40 @@
 footer
-	
+
 	// container
 
 	.container
 
-		// links
+		// footer content
 
-		ul.footer__links
-			li
-				a(href="#" title="")
-					| about
-			li
-				a(href="#" title="")
-					| privacy policy
-			li
-				a(href="#" title="")
-					| sitemap
+		.footer__content
+
+			// links
+
+			ul.footer__links
+				li
+					a(href="#" title="")
+						| about
+				li
+					a(href="#" title="")
+						| privacy policy
+				li
+					a(href="#" title="")
+						| sitemap
+
+			// socials
+
+			ul.footer__socials
+				li
+					a(href="#" title="")
+						img(src="img/fb.svg" alt="")
+				li
+					a(href="#" title="")
+						img(src="img/tw.svg" alt="")
+				li
+					a(href="#" title="")
+						img(src="img/inst.svg" alt="")
+
+			// copyright info
+
+			p.footer__copyright
+				| &copy; 2018 SLabs team. Lorem ipsum dolor sit amet consectetur adipisicing elit.
