--- a/dev/index.pug
+++ b/dev/index.pug
@@ -2,13 +2,10 @@ doctype html
 html(lang='ru')
   head
     meta(charset='utf-8')
-    meta(name='viewport', content='width=device-width, initial-scale=1')
+    //meta(name='viewport', content='width=device-width, initial-scale=1')
     meta(name="theme-color" content="#000000")
-    title JS-SNIPPETS.COM | Title page
-    link(rel='stylesheet', href='../styles/bootstrap.css')
-    link(rel='stylesheet', href='../styles/jquery.fancybox.min.css')
+    title JS-SNIPPETS.COM | Main page
     link(rel='stylesheet', href='../styles/normalize.css')
-    link(rel='stylesheet', href='../styles/animate.css')
     link(rel='stylesheet', href='../styles/style.css')
   body
 
@@ -16,15 +13,4 @@ html(lang='ru')
 
     include ./blocks/block-footer/footer.pug
 
-
-    // scripts
-
-    script(src='../js/jquery-3.2.1.min.js')
-    script(src='../js/jquery.bpopup.min.js')
-    script(src='../js/smooth-scroll.js')
-    script(src='../js/wow.js')
-    script(src='../js/responsiveslides.min.js')
-    script(src='../js/jquery.fancybox.min.js')
-    script(src='../js/scripts.js')
-
-    // / scripts
+    // footer
