--- a/dev/styles/style.less
+++ b/dev/styles/style.less
@@ -24,7 +24,6 @@ a {
 
 body {
 	cursor: default;
-	overflow-x: hidden !important;
 }
 
 a {
@@ -39,4 +38,19 @@ ul {
 .no-margin {
 	margin: 0 !important;
 	float: none !important;
+}
+
+// container
+
+.container {
+    margin: 0 auto;
+    max-width: 1200px;
+}
+
+// div styled
+
+.container div, ul {
+    margin: 0;
+    padding: 10px;
+    border-radius: 10px;
 }
