--- a/dev/styles/helpers/variables.less
+++ b/dev/styles/helpers/variables.less
@@ -9,5 +9,10 @@
 @blue: #30918E;
 @blue-dark: #266F73;
 @blue-very-dark: #081716;
+@white: #fff;
+
+// fonts
+
+@os-regular: 'open_sansregular';
 
 // other variables
