--- a/dev/blocks/block-footer/footer.pug
+++ b/dev/blocks/block-footer/footer.pug
@@ -4,6 +4,17 @@ footer
 
 	.container
 
+		// footer top bar
+
+		.footer__topbar
+
+			a.logo.footer__logo(href="#" title="")
+				span
+					| JS
+				| -snippets
+
+			.logo-line
+
 		// footer content
 
 		.footer__content
