--- a/dev/blocks/block-footer/footer.less
+++ b/dev/blocks/block-footer/footer.less
@@ -4,6 +4,35 @@ footer {
     width: 100%;
     background: @black;
     color: @white;
+    height: auto;
+    padding-bottom: 10px;
+}
+
+.footer__topbar {
+    padding: 20px 0 30px 0; 
+    text-align: right;
+}
+
+.footer__logo {
+    //display: inline-block;    
+}
+
+.logo {
+    color: @white;
+    font: 22px 'open_sanssemibold';
+    text-decoration: none;
+    
+    span {
+        color: @green;
+    }
+    
+}
+
+.logo-line {
+    margin: 26px 0 -10px -4px;
+    width: 32%;
+    height: 1px;
+    background: @green;
 }
 
 // links
