--- a/dev/index.pug
+++ b/dev/index.pug
@@ -9,6 +9,165 @@ html(lang='ru')
     link(rel='stylesheet', href='../styles/style.css')
   body
 
+    // header
+
+    include ./blocks/block-header/header.pug
+
+    // / header
+
+    // main
+
+    main
+
+      // content
+
+      .container.posts
+
+        // post
+
+        article(role="post")
+          a.icon-tag(href="#" title="")
+            | WordPress Theme
+          a.posts__preview(href="#" title="")
+            img(src="./img/previews/preview-1.jpg" alt="@@")
+          a.posts__title(href="#" title="")
+            | Uranium - Creative Portfolio WordPress Theme
+          hr
+          a.button.posts__button-preview(href="#" title="")
+            | Preview
+          a.icon-heart(href="#" title="")
+            img(src="img/heart.svg" alt="")
+
+        // post
+
+        article(role="post")
+          a.icon-tag(href="#" title="")
+            | WordPress Theme        
+          a.posts__preview(href="#" title="")
+            img(src="./img/previews/preview-2.jpg" alt="@@")
+          a.posts__title(href="#" title="")
+            | Glück - A Creative Multi-Concept Theme for Digital Agencies and Freelancers
+          hr
+          a.button.posts__button-preview(href="#" title="")
+            | Preview
+          a.icon-heart(href="#" title="")
+            img(src="img/heart.svg" alt="")
+
+
+        // post
+
+        article(role="post")
+          a.icon-tag(href="#" title="")
+            | WordPress Theme
+          a.posts__preview(href="#" title="")
+            img(src="./img/previews/preview-3.jpg" alt="@@")
+          a.posts__title(href="#" title="")
+            | Digrand - Portfolio And Blog Theme
+          hr
+          a.button.posts__button-preview(href="#" title="")
+            | Preview
+          a.icon-heart(href="#" title="")
+            img(src="img/heart.svg" alt="")
+
+
+        // post
+
+        article(role="post")
+          a.icon-tag(href="#" title="")
+            | WordPress Theme        
+          a.posts__preview(href="#" title="")
+            img(src="./img/previews/preview-4.jpg" alt="@@")
+          a.posts__title(href="#" title="")
+            | Enside - Multipurpose Onepage WordPress Theme
+          hr
+          a.button.posts__button-preview(href="#" title="")
+            | Preview
+          a.icon-heart(href="#" title="")
+            img(src="img/heart.svg" alt="")
+
+
+        // post
+
+        article(role="post")
+          a.icon-tag(href="#" title="")
+            | WordPress Theme        
+          a.posts__preview(href="#" title="")
+            img(src="./img/previews/preview-5.jpg" alt="@@")
+          a.posts__title(href="#" title="")
+            | Camille - Multi-Concept WordPress Theme
+          hr
+          a.button.posts__button-preview(href="#" title="")
+            | Preview
+          a.icon-heart(href="#" title="")
+            img(src="img/heart.svg" alt="")
+
+
+        // post
+
+        article(role="post")
+          a.icon-tag(href="#" title="")
+            | WordPress Theme        
+          a.posts__preview(href="#" title="")
+            img(src="./img/previews/preview-6.jpg" alt="@@")
+          a.posts__title(href="#" title="")
+            | Andra - Photography Portfolio WordPress Ajax Theme            
+          hr
+          a.button.posts__button-preview(href="#" title="")
+            | Preview
+          a.icon-heart(href="#" title="")
+            img(src="img/heart.svg" alt="")
+
+
+        // post
+
+        article(role="post")
+          a.icon-tag(href="#" title="")
+            | WordPress Theme        
+          a.posts__preview(href="#" title="")
+            img(src="./img/previews/preview-7.jpg" alt="@@")
+          a.posts__title(href="#" title="")
+            | AuroraX - Portfolio WordPress Theme
+          hr
+          a.button.posts__button-preview(href="#" title="")
+            | Preview
+          a.icon-heart(href="#" title="")
+            img(src="img/heart.svg" alt="")
+
+
+        // post
+
+        article(role="post")
+          a.icon-tag(href="#" title="")
+            | WordPress Theme        
+          a.posts__preview(href="#" title="")
+            img(src="./img/previews/preview-8.jpg" alt="@@")
+          a.posts__title(href="#" title="")
+            | MiniPo - Multipurpose Minimal Portfolio WordPress Theme
+          hr
+          a.button.posts__button-preview(href="#" title="")
+            | Preview
+          a.icon-heart(href="#" title="")
+            img(src="img/heart.svg" alt="")
+
+
+        // post
+
+        article(role="post")
+          a.icon-tag(href="#" title="")
+            | WordPress Theme        
+          a.posts__preview(href="#" title="")
+            img(src="./img/previews/preview-9.jpg" alt="@@")
+          a.posts__title(href="#" title="")
+            | Sarto - A Multi-Concept Theme for Creative Agencies and Freelancers
+          hr
+          a.button.posts__button-preview(href="#" title="")
+            | Preview
+          a.icon-heart(href="#" title="")
+            img(src="img/heart.svg" alt="")
+
+
+    // / main
+
     // footer
 
     include ./blocks/block-footer/footer.pug
