--- a/dev/styles/style.css
+++ b/dev/styles/style.css
@@ -4,6 +4,7 @@ a {
 }
 body {
   cursor: default;
+  font: 14px 'open_sansregular';
 }
 a {
   cursor: pointer;
@@ -20,16 +21,124 @@ ul {
   margin: 0 auto;
   max-width: 1200px;
 }
-.container div,
-ul {
+.posts {
+  max-width: 1220px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
+  grid-gap: 20px;
+  grid-column-gap: 20px;
+}
+main {
+  padding: 40px 0 20px 0;
+  background: #f3f3f3;
+}
+article {
+  position: relative;
+  margin: 0 20px 20px 0;
+  padding: 16px;
+  width: auto;
+  background: #fff;
+}
+article hr {
+  margin: 16px 0;
+  display: block;
+  width: 100%;
+  height: 1px;
+  border: 0;
+  outline: 0;
+  background: #d9d9d9;
+}
+.posts__title {
   margin: 0;
-  padding: 10px;
-  border-radius: 10px;
+  display: block;
+  min-height: 50px;
+  font: 16px 'open_sanssemibold';
+  color: #0F050C;
+  text-decoration: none;
+}
+.posts__title:hover {
+  text-decoration: underline;
+}
+.posts__preview {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+.posts__preview img {
+  margin-bottom: 16px;
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+.posts__button-preview {
+  background: #fff;
+}
+.posts__button-preview:hover {
+  border-color: #3CB46C;
+}
+.icon-heart {
+  margin-top: 4px;
+  display: block;
+  float: right;
+}
+.icon-heart img {
+  padding: 0;
+  margin: 0;
+  display: block;
+  width: 22px;
+  height: 22px;
+}
+.icon-tag {
+  margin: 0 0 0 0;
+  position: absolute;
+  padding: 6px 10px;
+  background: #000;
+  font: 14px 'open_sansregular';
+  color: #3CB46C;
+  text-decoration: none;
+}
+.button {
+  display: inline-block;
+  padding: 6px 10px;
+  border: 1px solid #d9d9d9;
+  border-radius: 2px;
+  background: #fff;
+  font: 14px 'open_sanssemibold';
+  color: #0F050C;
+  text-align: center;
+  line-height: auto;
+  text-decoration: none;
+}
+header {
+  padding: 16px 0 20px 0;
+  width: 100%;
+  background: #0F050C;
+  color: #fff;
 }
 footer {
   width: 100%;
   background: #0F050C;
   color: #fff;
+  height: auto;
+  padding-bottom: 10px;
+}
+.footer__topbar {
+  padding: 20px 0 30px 0;
+  text-align: right;
+}
+.logo {
+  color: #fff;
+  font: 22px 'open_sanssemibold';
+  text-decoration: none;
+}
+.logo span {
+  color: #3CB46C;
+}
+.logo-line {
+  margin: 26px 0 -10px -4px;
+  width: 32%;
+  height: 1px;
+  background: #3CB46C;
 }
 .footer__content {
   display: grid;
@@ -87,6 +196,18 @@ footer {
 p.footer__copyright {
   font: 12px 'open_sansregular';
   color: #F4F4FB;
+}
+header {
+  padding: 16px 0 20px 0;
+  width: 100%;
+  background: #0F050C;
+  color: #fff;
+}
+header {
+  padding: 16px 0 20px 0;
+  width: 100%;
+  background: #0F050C;
+  color: #fff;
 }
 /*
 LESS variables are information about icon's compiled state, stored under its original file name
