--- a/dev/styles/style.less
+++ b/dev/styles/style.less
@@ -23,7 +23,8 @@ a {
 // body
 
 body {
-	cursor: default;
+    cursor: default;
+    font: 14px 'open_sansregular';
 }
 
 a {
@@ -47,10 +48,119 @@ ul {
     max-width: 1200px;
 }
 
-// div styled
+.posts {
+    max-width: 1220px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
+    
+    grid-gap: 20px;
+    grid-column-gap: 20px;
+}
 
-.container div, ul {
+main {
+    padding: 40px 0 20px 0;
+    background: #f3f3f3;
+}
+
+article {
+    position: relative;
+    margin: 0 20px 20px 0;
+    padding: 16px;
+    width: auto;
+    background: @white;
+
+    hr {
+        margin: 16px 0;
+        display: block;
+        width: 100%;
+        height: 1px;
+        border: 0;
+        outline: 0;
+        background: #d9d9d9;
+    }
+
+}
+
+.posts__title {
     margin: 0;
-    padding: 10px;
-    border-radius: 10px;
+    display: block;
+    min-height: 50px;
+    font: 16px 'open_sanssemibold';
+    color: @black;
+    text-decoration: none;
+
+    &:hover {
+        text-decoration: underline;
+    }
+
+}
+
+.posts__preview {
+    display: block;
+    width: 100%;
+    height: auto;
+
+    img {
+        margin-bottom: 16px;
+        display: block;
+        max-width: 100%;
+        height: auto;        
+    }
+    
+}
+
+.posts__button-preview {
+    background: #fff;
+
+    &:hover {
+        border-color: @green;
+    }
+
+}
+
+// icons
+
+.icon-heart {
+    margin-top: 4px;
+    display: block;
+    float: right;
+
+    img {
+        padding: 0;
+        margin: 0;
+        display: block;
+        width: 22px;
+        height: 22px;
+    }
+
+}
+
+// tag
+
+.icon-tag {
+    margin: 0 0 0 0;
+    position: absolute;
+    padding: 6px 10px;
+    background: #000;
+
+    font: 14px 'open_sansregular';
+    color: @green;
+
+    text-decoration: none;
+}
+
+// buttons
+
+.button {
+    display: inline-block;
+    padding: 6px 10px;
+    border: 1px solid #d9d9d9;
+    border-radius: 2px;
+    background: #fff;
+
+    font: 14px 'open_sanssemibold';
+    color: @black;
+    text-align: center;
+    line-height: auto;
+    text-decoration: none;
 }
