--- a/dev/blocks/block-navigation/navigation.pug
+++ b/dev/blocks/block-navigation/navigation.pug
@@ -1,10 +1,16 @@
-header
+nav
 
 	// container
 
 	.container
 
-		a.logo(href="#" title="")
-			span
-				| JS
-			| -snippets
+		ul.navigation
+			li
+				a(href="#" title="")
+					| 444
+			li
+				a(href="#" title="")
+					| 444
+			li
+				a(href="#" title="")
+					| 444
