--- a/dev/blocks/block-search/search.pug
+++ b/dev/blocks/block-search/search.pug
@@ -1,10 +1,7 @@
-header
+.container
 
-	// container
-
-	.container
-
-		a.logo(href="#" title="")
-			span
-				| JS
-			| -snippets
+	h2
+		| Discover 26,341 code scripts and plugins from $2
+		
+	p
+		| All the code you need from PHP to Bootstrap, created by our global community of developers.
