--- a/dev/styles/style.less
+++ b/dev/styles/style.less
@@ -164,3 +164,39 @@ article {
     line-height: auto;
     text-decoration: none;
 }
+
+.detail {
+    max-width: 1220px;
+    display: grid;
+    grid-template-columns: 1fr 320px;
+    
+    grid-gap: 20px;
+    grid-column-gap: 20px;
+
+    article {
+        position: relative;
+        margin: 0 0px 20px 0;
+        padding: 16px;
+        width: auto;
+        background: @white;
+
+        img {
+            display: block;
+            width: 100%;
+            height: auto;
+        }
+
+        hr {
+            margin: 16px 0;
+            display: block;
+            width: 100%;
+            height: 1px;
+            border: 0;
+            outline: 0;
+            background: #d9d9d9;
+        }
+
+    }
+
+}
+
