--- a/dev/styles/style.css
+++ b/dev/styles/style.css
@@ -109,11 +109,33 @@ article hr {
   line-height: auto;
   text-decoration: none;
 }
-header {
-  padding: 16px 0 20px 0;
+.detail {
+  max-width: 1220px;
+  display: grid;
+  grid-template-columns: 1fr 320px;
+  grid-gap: 20px;
+  grid-column-gap: 20px;
+}
+.detail article {
+  position: relative;
+  margin: 0 0px 20px 0;
+  padding: 16px;
+  width: auto;
+  background: #fff;
+}
+.detail article img {
+  display: block;
   width: 100%;
-  background: #0F050C;
-  color: #fff;
+  height: auto;
+}
+.detail article hr {
+  margin: 16px 0;
+  display: block;
+  width: 100%;
+  height: 1px;
+  border: 0;
+  outline: 0;
+  background: #d9d9d9;
 }
 footer {
   width: 100%;
@@ -196,6 +218,12 @@ footer {
 p.footer__copyright {
   font: 12px 'open_sansregular';
   color: #F4F4FB;
+}
+header {
+  padding: 16px 0 20px 0;
+  width: 100%;
+  background: #0F050C;
+  color: #fff;
 }
 header {
   padding: 16px 0 20px 0;
