--- a/dev/blocks/block-navigation/navigation.pug
+++ b/dev/blocks/block-navigation/navigation.pug
@@ -7,10 +7,10 @@ nav
 		ul.navigation
 			li
 				a(href="#" title="")
-					| 444
+					| Item
 			li
 				a(href="#" title="")
-					| 444
+					| Item
 			li
 				a(href="#" title="")
-					| 444
+					| Item
