--- a/dev/blocks/block-navigation/navigation.less
+++ b/dev/blocks/block-navigation/navigation.less
@@ -1,8 +1,21 @@
-// footer
+// navigation
 
-header {
-    padding: 16px 0 20px 0;
-    width: 100%;
-    background: @black;
-    color: @white;
+.navigation {
+
+    li {
+        margin-right: 10px;
+        list-style: none;
+        display: inline-block;
+    }
+
+    li a, li a:hover {
+        border-radius: 4px;
+        padding: 6px;
+        background: #d9d9d9;
+
+        font: 14px 'open_sansregular';
+        color: @black;
+        text-decoration: none;
+    }
+
 }
