--- a/dev/blocks/block-pagination/pagination.less
+++ b/dev/blocks/block-pagination/pagination.less
@@ -1,8 +1,30 @@
-// footer
+// pagination
 
-header {
-    padding: 16px 0 20px 0;
-    width: 100%;
-    background: @black;
-    color: @white;
+.pagination {
+
+    li {
+        list-style: none;
+        display: inline-block;
+        text-align: center;
+    }
+
+    li a, li a:hover {
+        padding: 6px 8px;
+        background: #d9d9d9;
+        color: @black;
+
+        font: 14px 'open_sansregular';
+        color: @black;
+
+        text-decoration: none;
+
+        border-radius: 4px;
+
+        &:hover {
+            background: @black;
+            color: @white;
+        }
+
+    }
+
 }
