--- a/dev/index.pug
+++ b/dev/index.pug
@@ -38,11 +38,19 @@ html(lang='ru')
             img(src="./img/previews/preview-1.jpg" alt="@@")
           a.posts__title(href="#" title="")
             | Uranium - Creative Portfolio WordPress Theme
-          hr
-          a.button.posts__button-preview(href="#" title="")
-            | Preview
-          a.icon-heart(href="#" title="")
-            img(src="img/heart.svg" alt="")
+          ul
+            li
+              | item
+            li
+              | item
+            li
+              | item
+          .posts__detail                        
+            hr
+            a.button.posts__button-preview(href="#" title="")
+              | Preview
+            a.icon-heart(href="#" title="")
+              img(src="img/share.svg" alt="")
 
         // post
 
@@ -53,11 +61,19 @@ html(lang='ru')
             img(src="./img/previews/preview-2.jpg" alt="@@")
           a.posts__title(href="#" title="")
             | Glück - A Creative Multi-Concept Theme for Digital Agencies and Freelancers
-          hr
-          a.button.posts__button-preview(href="#" title="")
-            | Preview
-          a.icon-heart(href="#" title="")
-            img(src="img/heart.svg" alt="")
+          ul
+            li
+              | item
+            li
+              | item
+            li
+              | item
+          .posts__detail                        
+            hr
+            a.button.posts__button-preview(href="#" title="")
+              | Preview
+            a.icon-heart(href="#" title="")
+              img(src="img/share.svg" alt="")
 
 
         // post
@@ -69,11 +85,19 @@ html(lang='ru')
             img(src="./img/previews/preview-3.jpg" alt="@@")
           a.posts__title(href="#" title="")
             | Digrand - Portfolio And Blog Theme
-          hr
-          a.button.posts__button-preview(href="#" title="")
-            | Preview
-          a.icon-heart(href="#" title="")
-            img(src="img/heart.svg" alt="")
+          ul
+            li
+              | item
+            li
+              | item
+            li
+              | item
+          .posts__detail                        
+            hr
+            a.button.posts__button-preview(href="#" title="")
+              | Preview
+            a.icon-heart(href="#" title="")
+              img(src="img/share.svg" alt="")
 
 
         // post
@@ -85,11 +109,19 @@ html(lang='ru')
             img(src="./img/previews/preview-4.jpg" alt="@@")
           a.posts__title(href="#" title="")
             | Enside - Multipurpose Onepage WordPress Theme
-          hr
-          a.button.posts__button-preview(href="#" title="")
-            | Preview
-          a.icon-heart(href="#" title="")
-            img(src="img/heart.svg" alt="")
+          ul
+            li
+              | item
+            li
+              | item
+            li
+              | item
+          .posts__detail                        
+            hr
+            a.button.posts__button-preview(href="#" title="")
+              | Preview
+            a.icon-heart(href="#" title="")
+              img(src="img/share.svg" alt="")
 
 
         // post
@@ -101,11 +133,19 @@ html(lang='ru')
             img(src="./img/previews/preview-5.jpg" alt="@@")
           a.posts__title(href="#" title="")
             | Camille - Multi-Concept WordPress Theme
-          hr
-          a.button.posts__button-preview(href="#" title="")
-            | Preview
-          a.icon-heart(href="#" title="")
-            img(src="img/heart.svg" alt="")
+          ul
+            li
+              | item
+            li
+              | item
+            li
+              | item
+          .posts__detail                        
+            hr
+            a.button.posts__button-preview(href="#" title="")
+              | Preview
+            a.icon-heart(href="#" title="")
+              img(src="img/share.svg" alt="")
 
 
         // post
@@ -117,11 +157,19 @@ html(lang='ru')
             img(src="./img/previews/preview-6.jpg" alt="@@")
           a.posts__title(href="#" title="")
             | Andra - Photography Portfolio WordPress Ajax Theme            
-          hr
-          a.button.posts__button-preview(href="#" title="")
-            | Preview
-          a.icon-heart(href="#" title="")
-            img(src="img/heart.svg" alt="")
+          ul
+            li
+              | item
+            li
+              | item
+            li
+              | item
+          .posts__detail                        
+            hr
+            a.button.posts__button-preview(href="#" title="")
+              | Preview
+            a.icon-heart(href="#" title="")
+              img(src="img/share.svg" alt="")
 
 
         // post
@@ -133,11 +181,19 @@ html(lang='ru')
             img(src="./img/previews/preview-7.jpg" alt="@@")
           a.posts__title(href="#" title="")
             | AuroraX - Portfolio WordPress Theme
-          hr
-          a.button.posts__button-preview(href="#" title="")
-            | Preview
-          a.icon-heart(href="#" title="")
-            img(src="img/heart.svg" alt="")
+          ul
+            li
+              | item
+            li
+              | item
+            li
+              | item
+          .posts__detail                        
+            hr
+            a.button.posts__button-preview(href="#" title="")
+              | Preview
+            a.icon-heart(href="#" title="")
+              img(src="img/share.svg" alt="")
 
 
         // post
@@ -149,11 +205,19 @@ html(lang='ru')
             img(src="./img/previews/preview-8.jpg" alt="@@")
           a.posts__title(href="#" title="")
             | MiniPo - Multipurpose Minimal Portfolio WordPress Theme
-          hr
-          a.button.posts__button-preview(href="#" title="")
-            | Preview
-          a.icon-heart(href="#" title="")
-            img(src="img/heart.svg" alt="")
+          ul
+            li
+              | item
+            li
+              | item
+            li
+              | item
+          .posts__detail                        
+            hr
+            a.button.posts__button-preview(href="#" title="")
+              | Preview
+            a.icon-heart(href="#" title="")
+              img(src="img/share.svg" alt="")
 
 
         // post
@@ -165,11 +229,19 @@ html(lang='ru')
             img(src="./img/previews/preview-9.jpg" alt="@@")
           a.posts__title(href="#" title="")
             | Sarto - A Multi-Concept Theme for Creative Agencies and Freelancers
-          hr
-          a.button.posts__button-preview(href="#" title="")
-            | Preview
-          a.icon-heart(href="#" title="")
-            img(src="img/heart.svg" alt="")
+          ul
+            li
+              | item
+            li
+              | item
+            li
+              | item
+          .posts__detail                        
+            hr
+            a.button.posts__button-preview(href="#" title="")
+              | Preview
+            a.icon-heart(href="#" title="")
+              img(src="img/share.svg" alt="")
 
       // content
 
