--- a/dev/styles/style.css
+++ b/dev/styles/style.css
@@ -48,10 +48,16 @@ article hr {
   outline: 0;
   background: #d9d9d9;
 }
+article ul li {
+  list-style: none;
+  font: 12px 'open_sansregular';
+  font-style: italic;
+  color: #000;
+}
 .posts__title {
   margin: 0;
   display: block;
-  min-height: 50px;
+  min-height: 40px;
   font: 16px 'open_sanssemibold';
   color: #0F050C;
   text-decoration: none;
