--- a/dev/styles/style.less
+++ b/dev/styles/style.less
@@ -79,12 +79,25 @@ article {
         background: #d9d9d9;
     }
 
+    ul {
+        li {
+            list-style: none;
+            font: 12px 'open_sansregular';
+            font-style: italic;
+            color: #000;
+        }
+    }
+
+}
+
+.posts__detail {
+
 }
 
 .posts__title {
     margin: 0;
     display: block;
-    min-height: 50px;
+    min-height: 40px;
     font: 16px 'open_sanssemibold';
     color: @black;
     text-decoration: none;
