--- a/dev/index.pug
+++ b/dev/index.pug
@@ -47,6 +47,8 @@ html(lang='ru')
               | item
           .posts__detail                        
             hr
+            p
+              | lorem ipsum          
             a.button.posts__button-preview(href="#" title="")
               | Preview
             a.icon-heart(href="#" title="")
@@ -70,6 +72,8 @@ html(lang='ru')
               | item
           .posts__detail                        
             hr
+            p
+              | lorem ipsum               
             a.button.posts__button-preview(href="#" title="")
               | Preview
             a.icon-heart(href="#" title="")
@@ -94,6 +98,8 @@ html(lang='ru')
               | item
           .posts__detail                        
             hr
+            p
+              | lorem ipsum             
             a.button.posts__button-preview(href="#" title="")
               | Preview
             a.icon-heart(href="#" title="")
@@ -118,6 +124,8 @@ html(lang='ru')
               | item
           .posts__detail                        
             hr
+            p
+              | lorem ipsum            
             a.button.posts__button-preview(href="#" title="")
               | Preview
             a.icon-heart(href="#" title="")
@@ -142,6 +150,8 @@ html(lang='ru')
               | item
           .posts__detail                        
             hr
+            p
+              | lorem ipsum            
             a.button.posts__button-preview(href="#" title="")
               | Preview
             a.icon-heart(href="#" title="")
@@ -166,6 +176,8 @@ html(lang='ru')
               | item
           .posts__detail                        
             hr
+            p
+              | lorem ipsum             
             a.button.posts__button-preview(href="#" title="")
               | Preview
             a.icon-heart(href="#" title="")
@@ -190,6 +202,8 @@ html(lang='ru')
               | item
           .posts__detail                        
             hr
+            p
+              | lorem ipsum              
             a.button.posts__button-preview(href="#" title="")
               | Preview
             a.icon-heart(href="#" title="")
@@ -214,6 +228,8 @@ html(lang='ru')
               | item
           .posts__detail                        
             hr
+            p
+              | lorem ipsum             
             a.button.posts__button-preview(href="#" title="")
               | Preview
             a.icon-heart(href="#" title="")
@@ -238,6 +254,8 @@ html(lang='ru')
               | item
           .posts__detail                        
             hr
+            p
+              | lorem ipsum         
             a.button.posts__button-preview(href="#" title="")
               | Preview
             a.icon-heart(href="#" title="")
