--- a/dev/styles/style.less
+++ b/dev/styles/style.less
@@ -80,10 +80,11 @@ article {
     }
 
     ul {
+        margin-left: 20px;
         li {
-            list-style: none;
-            font: 12px 'open_sansregular';
-            font-style: italic;
+            list-style: disc;
+            font: 14px 'open_sansregular';
+            //font-style: italic;
             color: #000;
         }
     }
@@ -91,7 +92,7 @@ article {
 }
 
 .posts__detail {
-
+    height: auto;
 }
 
 .posts__title {
@@ -213,3 +214,61 @@ article {
 
 }
 
+// detail
+
+.rating {
+    li {
+        margin-right: 4px;
+        list-style: none;
+        display: inline-block;
+
+        a, a:hover {
+            display: block;
+            width:  14px;
+            height: 14px;
+            background: #000;
+            border-radius: 50%;
+        }
+
+    }
+
+}
+
+.price {
+    span {
+        display: inline-block;
+        font: 24px 'open_sansbold';
+    }
+    p {
+        display: inline-block;
+        font: 14px 'open_sansregular';
+    }
+}
+
+.date-published {
+
+    p {
+        font: 14px 'open_sansregular';
+        color: #d9d9d9;
+    }
+
+}
+
+.tags {
+    li {
+        list-style: none;
+        display: inline-block;
+
+        a, a:hover {
+            padding: 4px 8px;
+            background: #d8d8d8;
+            font: 14px 'open_sansregular';
+            color: @black;
+
+            text-decoration: none;
+
+            border-radius: 4px;
+        }
+
+    }
+}
