--- a/dev/styles/style.less
+++ b/dev/styles/style.less
@@ -217,6 +217,7 @@ article {
 // detail
 
 .rating {
+    margin: 0;
     li {
         margin-right: 4px;
         list-style: none;
@@ -255,6 +256,7 @@ article {
 }
 
 .tags {
+    margin-left: 0;
     li {
         list-style: none;
         display: inline-block;
