--- a/dev/detail.pug
+++ b/dev/detail.pug
@@ -35,68 +35,61 @@ html(lang='ru')
           p
             | Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur veritatis ut quidem in deleniti, perspiciatis pariatur maiores totam, facilis, natus dolore distinctio! Quod perferendis exercitationem quae natus fuga aliquid magnam!
 
-          ul.rating
-            li
-              a(href="#" title="")
-            li
-              a(href="#" title="")
-            li
-              a(href="#" title="")
-            li
-              a(href="#" title="")
-            li
-              a(href="#" title="")
 
-          .price
-            span
-              | 100
-            p
-              | $
-
-          .date-published
-            p
-              | add 19.05.18
-
-          // tags
-
-          ul.tags
-            li
-              a(href="#" title="")
-                | item
-            li
-              a(href="#" title="")
-                | item
-            li
-              a(href="#" title="")
-                | item
-            li
-              a(href="#" title="")
-                | item                                
-
-          // preview
-
-          a.button(href="#" title="")
-            | Preview
-
-          // buy sex with DIM SAMbI4
-
-          a.button(href="#" title="")
-            | buy
 
         aside
           
-          // rewr
+          // detail block
 
-          ul.categories
-            li
-              a(href="#" title="")
-                | 333
-            li
-              a(href="#" title="")
-                | 333
-            li
-              a(href="#" title="")
-                | 333                
+          .detail__block
+
+            ul.rating
+              li
+                a(href="#" title="")
+              li
+                a(href="#" title="")
+              li
+                a(href="#" title="")
+              li
+                a(href="#" title="")
+              li
+                a(href="#" title="")
+
+            .price
+              span
+                | 100
+              p
+                | $
+
+            .date-published
+              p
+                | add 19.05.18
+
+            // tags
+
+            ul.tags
+              li
+                a(href="#" title="")
+                  | item
+              li
+                a(href="#" title="")
+                  | item
+              li
+                a(href="#" title="")
+                  | item
+              li
+                a(href="#" title="")
+                  | item                                
+
+            // preview
+
+            a.button(href="#" title="")
+              | Preview
+
+            // buy sex with DIM SAMbI4
+
+            a.button(href="#" title="")
+              | buy
 
     // / main
 
