--- a/dev/styles/style.css
+++ b/dev/styles/style.css
@@ -148,6 +148,9 @@ article ul li {
   outline: 0;
   background: #d9d9d9;
 }
+.rating {
+  margin: 0;
+}
 .rating li {
   margin-right: 4px;
   list-style: none;
@@ -172,6 +175,9 @@ article ul li {
 .date-published p {
   font: 14px 'open_sansregular';
   color: #d9d9d9;
+}
+.tags {
+  margin-left: 0;
 }
 .tags li {
   list-style: none;
