--- a/dev/detail.pug
+++ b/dev/detail.pug
@@ -67,6 +67,10 @@ html(lang='ru')
 
             // tags
 
+            .title__small_bold
+              p
+                | Tags:
+
             ul.tags
               li
                 a(href="#" title="")
