--- a/dev/styles/style.less
+++ b/dev/styles/style.less
@@ -179,6 +179,12 @@ article {
     text-decoration: none;
 }
 
+.posts__detail {
+    p {
+        color: #d9d9d9;
+    }
+}
+
 .detail {
     max-width: 1220px;
     display: grid;
@@ -255,8 +261,17 @@ article {
 
 }
 
+.title__small_bold {
+    p {
+        margin-bottom: -4px;
+        font: 14px 'open_sansbold';
+        color: @black;
+    }
+}
+
 .tags {
     margin-left: 0;
+
     li {
         list-style: none;
         display: inline-block;
@@ -270,6 +285,12 @@ article {
             text-decoration: none;
 
             border-radius: 4px;
+
+            &:hover {
+                background: @black;
+                color: @white;
+            }
+
         }
 
     }
