--- a/dev/blocks/block-navigation/navigation.less
+++ b/dev/blocks/block-navigation/navigation.less
@@ -1,7 +1,8 @@
 // navigation
 
 .navigation {
-
+    padding: 10px 0;
+    
     li {
         margin-right: 10px;
         list-style: none;
@@ -10,7 +11,7 @@
 
     li a, li a:hover {
         border-radius: 4px;
-        padding: 6px;
+        padding: 8px;
         background: #d9d9d9;
 
         font: 14px 'open_sansregular';
