--- a/dev/blocks/block-footer/footer.less
+++ b/dev/blocks/block-footer/footer.less
@@ -8,6 +8,10 @@ footer {
     padding-bottom: 10px;
 }
 
+.footer {
+    max-width: 1160px;
+}
+
 .footer__topbar {
     padding: 20px 0 30px 0; 
     text-align: right;
