--- a/dev/blocks/block-pagination/pagination.less
+++ b/dev/blocks/block-pagination/pagination.less
@@ -9,7 +9,8 @@
     }
 
     li a, li a:hover {
-        padding: 6px 8px;
+        margin: 0 2px;
+        padding: 6px 12px;
         background: #d9d9d9;
         color: @black;
 
