--- a/dev/styles/style.css
+++ b/dev/styles/style.css
@@ -22,7 +22,7 @@ ul {
   max-width: 1200px;
 }
 .posts {
-  max-width: 1220px;
+  max-width: 1200px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
   grid-gap: 20px;
@@ -205,12 +205,26 @@ article ul li {
   background: #0F050C;
   color: #fff;
 }
+.categories {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+.category__title {
+  margin: -10px 0 20px 0;
+  padding: 0;
+  font: 18px 'open_sansbold';
+  color: #0F050C;
+  height: 30px;
+}
 footer {
   width: 100%;
   background: #0F050C;
   color: #fff;
   height: auto;
   padding-bottom: 10px;
+}
+.footer {
+  max-width: 1160px;
 }
 .footer__topbar {
   padding: 20px 0 30px 0;
@@ -293,6 +307,9 @@ header {
   background: #0F050C;
   color: #fff;
 }
+.navigation {
+  padding: 10px 0;
+}
 .navigation li {
   margin-right: 10px;
   list-style: none;
@@ -301,7 +318,7 @@ header {
 .navigation li a,
 .navigation li a:hover {
   border-radius: 4px;
-  padding: 6px;
+  padding: 8px;
   background: #d9d9d9;
   font: 14px 'open_sansregular';
   color: #0F050C;
@@ -314,7 +331,8 @@ header {
 }
 .pagination li a,
 .pagination li a:hover {
-  padding: 6px 8px;
+  margin: 0 2px;
+  padding: 6px 12px;
   background: #d9d9d9;
   font: 14px 'open_sansregular';
   color: #0F050C;
