--- a/dev/styles/style.less
+++ b/dev/styles/style.less
@@ -49,7 +49,7 @@ ul {
 }
 
 .posts {
-    max-width: 1220px;
+    max-width: 1200px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
     
@@ -294,4 +294,20 @@ article {
         }
 
     }
+}
+
+// categories
+
+.categories {
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
+.category__title {
+    margin: -10px 0 20px 0 ;
+    padding: 0;
+    font: 18px 'open_sansbold';
+    color: @black;
+    height: 30px;
+    //background: #000 !important;
 }
