fixed pages, styles & added block search-informer

--- a/dev/blocks/block-header/header.less
+++ b/dev/blocks/block-header/header.less
@@ -3,6 +3,7 @@
 header {
     padding: 16px 0 20px 0;
     width: 100%;
-    background: @black;
+    background: url('../img/bg.jpg') no-repeat center top;
+    background-size: cover;
     color: @white;
 }
