--- a/dev/blocks/block-navigation/navigation.pug
+++ b/dev/blocks/block-navigation/navigation.pug
@@ -7,10 +7,13 @@ nav
 		ul.navigation
 			li
 				a(href="#" title="")
-					| Item
+					| WordPress
 			li
 				a(href="#" title="")
-					| Item
+					| Joomla
 			li
 				a(href="#" title="")
-					| Item
+					| Modx
+			li
+				a(href="#" title="")
+					| Bitrix
