--- a/dev/index.pug
+++ b/dev/index.pug
@@ -21,18 +21,24 @@ html(lang='ru')
 
     // / header
 
+    // search informer
+
+    include ./blocks/block-search-informer/search-informer.pug
+
+    // / search informer
+
     // main
 
     main
 
       // container
 
-      .container.categories
+      .container
 
         // category title
 
         h3.category__title
-          | Title category
+          | Novelties
 
       // container
 
@@ -60,7 +66,7 @@ html(lang='ru')
               | lorem ipsum          
             a.button.posts__button-preview(href="#" title="")
               | Preview
-            a.icon-heart(href="#" title="")
+            a.icon-share(href="#" title="")
               img(src="img/share.svg" alt="")
 
         // post
@@ -85,7 +91,7 @@ html(lang='ru')
               | lorem ipsum               
             a.button.posts__button-preview(href="#" title="")
               | Preview
-            a.icon-heart(href="#" title="")
+            a.icon-share(href="#" title="")
               img(src="img/share.svg" alt="")
 
 
@@ -111,7 +117,7 @@ html(lang='ru')
               | lorem ipsum             
             a.button.posts__button-preview(href="#" title="")
               | Preview
-            a.icon-heart(href="#" title="")
+            a.icon-share(href="#" title="")
               img(src="img/share.svg" alt="")
 
 
@@ -137,7 +143,7 @@ html(lang='ru')
               | lorem ipsum            
             a.button.posts__button-preview(href="#" title="")
               | Preview
-            a.icon-heart(href="#" title="")
+            a.icon-share(href="#" title="")
               img(src="img/share.svg" alt="")
 
 
@@ -163,7 +169,7 @@ html(lang='ru')
               | lorem ipsum            
             a.button.posts__button-preview(href="#" title="")
               | Preview
-            a.icon-heart(href="#" title="")
+            a.icon-share(href="#" title="")
               img(src="img/share.svg" alt="")
 
 
@@ -189,7 +195,7 @@ html(lang='ru')
               | lorem ipsum             
             a.button.posts__button-preview(href="#" title="")
               | Preview
-            a.icon-heart(href="#" title="")
+            a.icon-share(href="#" title="")
               img(src="img/share.svg" alt="")
 
 
@@ -215,7 +221,7 @@ html(lang='ru')
               | lorem ipsum              
             a.button.posts__button-preview(href="#" title="")
               | Preview
-            a.icon-heart(href="#" title="")
+            a.icon-share(href="#" title="")
               img(src="img/share.svg" alt="")
 
 
@@ -241,9 +247,8 @@ html(lang='ru')
               | lorem ipsum             
             a.button.posts__button-preview(href="#" title="")
               | Preview
-            a.icon-heart(href="#" title="")
+            a.icon-share(href="#" title="")
               img(src="img/share.svg" alt="")
-
 
         // post
 
@@ -267,7 +272,7 @@ html(lang='ru')
               | lorem ipsum         
             a.button.posts__button-preview(href="#" title="")
               | Preview
-            a.icon-heart(href="#" title="")
+            a.icon-share(href="#" title="")
               img(src="img/share.svg" alt="")
 
       // content
