--- a/dev/blocks/block-footer/footer.less
+++ b/dev/blocks/block-footer/footer.less
@@ -2,7 +2,8 @@
 
 footer {
     width: 100%;
-    background: @black;
+    background: url('../img/bg.jpg') no-repeat center;
+    background-size: cover;
     color: @white;
     height: auto;
     padding-bottom: 10px;
@@ -14,11 +15,11 @@ footer {
 
 .footer__topbar {
     padding: 20px 0 30px 0; 
-    text-align: right;
+    //text-align: right;
 }
 
 .footer__logo {
-    //display: inline-block;    
+    text-align: left;   
 }
 
 .logo {
@@ -33,7 +34,7 @@ footer {
 }
 
 .logo-line {
-    margin: 26px 0 -10px -4px;
+    margin: 24px 0 -10px 0;
     width: 32%;
     height: 1px;
     background: @green;
