--- a/dev/blocks/block-navigation/navigation.less
+++ b/dev/blocks/block-navigation/navigation.less
@@ -12,11 +12,17 @@
     li a, li a:hover {
         border-radius: 4px;
         padding: 8px;
-        background: #d9d9d9;
+        background: @green;
+        color: @white;
 
         font: 14px 'open_sansregular';
-        color: @black;
         text-decoration: none;
+
+        &:hover {
+            background: #d9d9d9;
+            color: @black;
+        }
+
     }
 
 }
