--- a/dev/blocks/block-pagination/pagination.less
+++ b/dev/blocks/block-pagination/pagination.less
@@ -11,15 +11,12 @@
     li a, li a:hover {
         margin: 0 2px;
         padding: 6px 12px;
-        background: #d9d9d9;
-        color: @black;
-
-        font: 14px 'open_sansregular';
-        color: @black;
-
-        text-decoration: none;
-
+        background: @green;
+        color: @white;
         border-radius: 4px;
+
+        font: 14px @os-regular;
+        text-decoration: none;
 
         &:hover {
             background: @black;
