--- a/dev/styles/style.less
+++ b/dev/styles/style.less
@@ -16,7 +16,7 @@
 
 // animation
 
-a {
+a, article {
 	transition: all 0.5s ease-in-out;
 }
 
@@ -68,6 +68,12 @@ article {
     padding: 16px;
     width: auto;
     background: @white;
+
+    &:hover {
+        -webkit-box-shadow: 0px 0px 11px 3px rgba(0,0,0,0.10);
+        -moz-box-shadow: 0px 0px 11px 3px rgba(0,0,0,0.10);
+        box-shadow: 0px 0px 11px 3px rgba(0,0,0,0.10);
+    }
 
     hr {
         margin: 16px 0;
@@ -134,7 +140,7 @@ article {
 
 // icons
 
-.icon-heart {
+.icon-share {
     margin-top: 4px;
     display: block;
     float: right;
