styled page index

--- a/dev/blocks/block-pagination/pagination.pug
+++ b/dev/blocks/block-pagination/pagination.pug
@@ -2,7 +2,7 @@
 	ul.pagination
 		li
 			a(href="#" title="")
-				| <<
+				img.pagination__prev(src="../img/arrow.svg" alt="@@")
 		li
 			a(href="#" title="")
 				| 1
@@ -20,4 +20,4 @@
 				| 5
 		li
 			a(href="#" title="")
-				| >>
+				img.pagination__next(src="../img/arrow.svg" alt="@@")
