--- a/dev/styles/style.less
+++ b/dev/styles/style.less
@@ -130,10 +130,15 @@ article {
 }
 
 .posts__button-preview {
-    background: #fff;
+    background: @green !important;
+    color: @white !important;
+    border-radius: 4px !important;
+    border: 1px solid @green !important;
 
     &:hover {
-        border-color: @green;
+        border: 1px solid @green !important;
+        background: @grey !important;
+        color: @black !important;
     }
 
 }
