--- a/dev/blocks/block-footer/footer.less
+++ b/dev/blocks/block-footer/footer.less
@@ -2,7 +2,7 @@
 
 footer {
     width: 100%;
-    background: url('../img/bg.jpg') no-repeat center;
+    background: url('../img/bg.png') no-repeat center;
     background-size: cover;
     color: @white;
     height: auto;
