--- a/dev/blocks/block-header/header.less
+++ b/dev/blocks/block-header/header.less
@@ -3,7 +3,7 @@
 header {
     padding: 16px 0 20px 0;
     width: 100%;
-    background: url('../img/bg.jpg') no-repeat center top;
+    background: url('../img/bg.png') no-repeat center top;
     background-size: cover;
     color: @white;
 }
