--- a/dev/blocks/block-pagination/pagination.less
+++ b/dev/blocks/block-pagination/pagination.less
@@ -26,3 +26,14 @@
     }
 
 }
+
+.pagination__next, .pagination__prev {
+    margin: 0;
+    display: inline-block;
+    width: 12px;
+    height: 12px;
+}
+
+.pagination__prev {
+    transform: rotate(-180deg);
+}
