--- a/dev/blocks/block-search-informer/search-informer.less
+++ b/dev/blocks/block-search-informer/search-informer.less
@@ -20,3 +20,54 @@
     }
 
 }
+
+// search form
+
+.search {
+    margin: 40px 0 10px 0;
+    display: grid;
+    justify-items: center;
+    //grid-template-columns: 1fr 400px;
+
+    form {
+        position: relative;
+        width: 600px;
+        height: 60px;
+
+
+        input[type="text"] {
+            font: 18px @os-regular;
+            color: @black;
+            padding: 0 14px;
+            width: 100%;
+            height: 60px;
+            background: @white;
+            border: 0;
+            border-radius: 4px !important;
+            outline: 0;            
+        }
+
+        button {
+            top: 16px;
+            right: -14px;
+            position: absolute;
+            //width: 40px;
+            //height: 40px;
+            //background: url('../img/search.svg') no-repeat center;
+            border: 0;
+            outline: 0;
+            background: 0;
+            cursor: pointer;
+
+            img {
+                display: block;
+                width: 26px;
+                height: 26px;
+                background: 0;
+            }
+
+        }
+
+    }
+
+}
