--- a/dev/blocks/block-search-informer/search-informer.pug
+++ b/dev/blocks/block-search-informer/search-informer.pug
@@ -7,3 +7,11 @@
 			| 43,040 WordPress Themes, Website Templates From $2
 		p
 			| WordPress themes, web templates and more. Brought to you by the largest global community of creatives.
+
+		// block search
+
+		.search.search-informer__search
+			form(action="/" method="post")
+				button
+					img(src="../img/search.svg" alt="@@")
+				input(name="search" type="text" placeholder="Search...")
